Update classification api and files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,8 @@ services:
   
   backend:
     container_name: backend
-    build: ./nodejs
+    build: 
+      context: ./nodejs
     restart: always
     ports:
       - 4500:4500
