Update files and API about mongodb

--- a/nodejs/.env
+++ b/nodejs/.env
@@ -4,8 +4,8 @@ PORT=4500
 SERVER_IP=0.0.0.0
 # MongoDB URI
 # MONGO_URI=mongodb://localhost:27017/<db-name>
-# MONGODB_URI=mongodb://developer:developer@mongo_db:27017 # docker 전용
+MONGODB_URI=mongodb://developer:developer@mongo_db:27017 # docker 전용
 # MONGO_URI=mongodb://localhost:27017/todolist
-# DB_NAME=caad
+DB_NAME=classification
 # DB_USER=developer
 # DB_PASS=developer
