--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,19 +22,19 @@ services:
       - 4500:4500
     environment:
       PORT: 4500
-      # MONGODB_URI: mongodb://mongo_db:27017
-      # DB_NAME: caad
-    # depends_on:
-    #   - mongo_db
+      MONGODB_URI: mongodb://mongo_db:27017
+      DB_NAME: classfication
+    depends_on:
+      - mongo_db
     volumes:
       - ./nodejs/:/usr/src/app/
 
-  # mongo_db:
-  #   container_name: db_container
-  #   image: mongo:latest
-  #   restart: always
-  #   volumes:
-  #     - mongo_db:/data/db
+  mongo_db:
+    container_name: db_container
+    image: mongo:latest
+    restart: always
+    volumes:
+      - ./mongo_db:/data/db
     
-# volumes:
-#   mongo_db: {}
+volumes:
+  mongo_db: {}
